[tool.poetry]
name = "edb-scrape-script"
version = "0.1.0"
description = ""
authors = ["Karel Madera <karel.madera@eyen.se>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.11.1"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
